# quantitative_cart_design

GUI/: .GUI_pai_socket.py.swo  GUI_pai_socket.py  WiFi_double.py  dsds.html  pai_GUI_socket.py  图形vxpython.py
GUI/gruantitave_gui/: dsds.html  gaode_map_test.html  main.py  map.html
GUI/gruantitave_gui/test/: av_web_copy.html  main.py
MCU_program/v2_0/: CMakeCache.txt  CMakeLists.txt
MCU_program/v2_0/Hardware_driver/: gps.c  gps.h  motor.c  motor.h
MCU_program/v2_0/Project/: project.code-workspace  project.uvguix.q1325  project.uvoptx  project.uvprojx
MCU_program/v2_0/Project/.eide/: eide.yml  env.ini  files.options.yml
MCU_program/v2_0/Project/Listings/: project.map  startup_stm32f10x_md.lst
MCU_program/v2_0/Project/Objects/: communication.crf  communication.d  core_cm3.crf  core_cm3.d  delay.crf  delay.d  gps.crf  gps.d  it_control.crf  it_control.d  main.crf  main.d  misc.crf  misc.d  motor.crf  motor.d  navigation.crf  navigation.d  oled.crf  oled.d  periphal_package.crf  periphal_package.d  pid.crf  pid.d  project.axf  project.build_log.htm  project.htm  project.lnp  project_usart_test1.dep  public.crf  public.d  stm32f10x_adc.crf  stm32f10x_adc.d  stm32f10x_bkp.crf  stm32f10x_bkp.d  stm32f10x_can.crf  stm32f10x_can.d  stm32f10x_cec.crf  stm32f10x_cec.d  stm32f10x_crc.crf  (+43 more)
MCU_program/v2_0/Software_package/: Navigation.c  Navigation.h  communication.c  communication.h  delay.c  delay.h  periphal_package.c  periphal_package.h  pid.c  pid.h
MCU_program/v2_0/Start/: startup_stm32f10x_md.s
MCU_program/v2_0/System/: IT_control.c  IT_control.h  public.c  public.h  system_clock.c  system_clock.h  system_config.c  system_config.h
MCU_program/v2_0/User/: main.c  stm32f10x.h
MCU_program/v2_0/cmake/: toolchain-arm-none-eabi.cmake
pi_services_handler/: .gitignore  PID_changeTowards.py  a.out  car_motion_handler.py  data_handler.py  get_xbox_data  get_xbox_data.c  paste_test.txt  pi_config.py  pi_get_xbox_data_11_6.py  pi_server_v1_0.py  pi_server_v2_0.py  publish_rpi_ip.py  send_rpi_ip.sh  serial_write_test.py  socket_handler.py  thread_handler.py
pi_services_handler/c_project/: CMakeLists.txt
pi_services_handler/c_project/include/: config.h  data_parser.h  joystick.h  motion_control.h  pid_controller.h  qmc5883p.h  serial_comm.h  socket_comm.h
pi_services_handler/c_project/python_version/: QMC5883P_get_angle.py  car_motion_handler.py  data_handler.py  enum_test.py  get_xbox_data.c  joystick_handler.py  pi_config.py  pi_get_xbox_data.py  pi_server_v2_0.py  serial_read_test.py  thread_handler.py
pi_services_handler/c_project/src/: data_parser.c  joystick.c  main.c  motion_control.c  pid_controller.c  qmc5883p.c  serial_comm.c  socket_comm.c
pi_services_handler/socket_test/: client.py  function.c  function.h  hello.c  server.py
